# nbody_psys17

./: .gitignore  CMakeLists.txt  FindOpenCL.cmake  README.md  makefile  readme.txt
abgabe/: .gitignore  bibliography.bib  hel_log_ocl.txt  hel_log_omp.txt  nbody.tex  omp_extract.cpp  val_extract_1.txt  val_extract_2.txt  val_log.txt  val_log_after.txt
benchmark/: benchmark_nbody.py  benchmark_nbody_ocl.py  benchmark_nbody_omp.py  benchmark_sequential_part.py  plot_ahmdal.py  plot_benchmark.py  plot_benchmark_ocl.py  plot_ocl_benchmark.py  plot_omp_benchmark.py  plot_sequential_part.py
command_line_visualization/: ffmpeg.txt  nbody_visualization_cli  nbody_with_vis.sh  settings.json
command_line_visualization/source/: nbody_visualization_cli.java
kernel/: core.cl
nbody_opencl/: .gitignore  CMakeLists.txt  README  makefile  random_galaxy.txt  readme.txt  run.sh
nbody_opencl/includes/: cl.hpp
nbody_opencl/kernel/: core.cl
nbody_opencl/src/: generateRandomGalaxy.py  main.c  main.cpp  util.cpp  util.hpp
nbody_visualization/: nbody_visualization.pde
nbody_visualization_cli/: nbody_visualization.pde  nbody_visualization_cli.pde
nbody_visualization_cli/application.linux64/: nbody_visualization
nbody_visualization_cli/application.linux64/source/: nbody_visualization.java  nbody_visualization.pde
presentation/: .gitignore  nbody_presentation.tex
presentation/img/: classes.puml
realtime_visualization/: nbody_visualization_cli.pde  nbody_with_realtime_vis.sh  nbody_with_vis.sh  realtime_visualization.pde
realtime_visualization/application.linux-arm64/: realtime_visualization
realtime_visualization/application.linux-arm64/source/: realtime_visualization.java
realtime_visualization/application.linux-armv6hf/: realtime_visualization
realtime_visualization/application.linux32/: realtime_visualization
realtime_visualization/application.linux32/source/: realtime_visualization.pde
realtime_visualization/application.linux64/: realtime_visualization
realtime_visualization/source/: realtime_visualization.java  realtime_visualization.pde
replay_visualization/: nbody_with_replay_vis.sh  replay_visualization.pde
replay_visualization/application.linux-arm64/: replay_visualization
replay_visualization/application.linux-armv6hf/: replay_visualization
replay_visualization/application.linux32/: replay_visualization
replay_visualization/application.linux64/: replay_visualization
replay_visualization/source/: replay_visualization.java  replay_visualization.pde
resources/: generateRandomGalaxy.py  random_galaxy.txt  solar_system.txt
resources/test/: example.txt
src/: Body.cpp  Body.h  Simulator.cpp  Simulator.h  body.c  body.h  core.c  core.h  main.cpp  nbody.c
src/main/: Body.cpp  Body.h  Config.cpp  Config.h  ConfigParser.cpp  ConfigParser.h  Mode.cpp  Mode.h  OmpSimulator.cpp  OmpSimulator.h  OpenClSimulator.cpp  OpenClSimulator.h  SignalHandler.cpp  SignalHandler.h  Simulator.cpp  Simulator.h  Util.cpp  Util.h  main.cpp
src/test/: Body_test.cpp  Body_test.h  CMakeLists.txt  ConfigParser_test.cpp  ConfigParser_test.h  example_test.cpp  example_test.h  gtest.cpp
